Added GTFS upload to FE, changed UI for stops searching, added build uptions using bash script and Docker