@@ -3,6 +3,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     id("org.springframework.boot") version "2.6.3"
     id("io.spring.dependency-management") version "1.0.11.RELEASE"
+    id("com.github.johnrengelman.shadow") version "7.0.0"
     kotlin("jvm") version "1.6.10"
     kotlin("plugin.serialization") version "1.6.10"
     kotlin("plugin.spring") version "1.6.10"
@@ -32,16 +33,15 @@ dependencies {
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     implementation("org.flywaydb:flyway-core:8.5.2")
     implementation("org.jetbrains.kotlin:kotlin-stdlib")
-    implementation("io.ktor:ktor-client-core:1.6.7")
-    implementation("io.ktor:ktor-client-cio:1.6.7")
-    implementation("io.ktor:ktor-client-jackson:1.6.7")
     //runtimeOnly("org.postgresql:postgresql")
     // https://mvnrepository.com/artifact/com.h2database/h2
     implementation("com.h2database:h2:2.1.210")
 
 // https://mvnrepository.com/artifact/junit/junit
     testImplementation("junit:junit:4.13.2")
-
+    testImplementation("io.ktor:ktor-client-core:1.6.7")
+    testImplementation("io.ktor:ktor-client-cio:1.6.7")
+    testImplementation("io.ktor:ktor-client-jackson:1.6.7")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("io.projectreactor:reactor-test")
     testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
@@ -58,7 +58,11 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
     useJUnitPlatform()
-    minHeapSize = "512m"
-    maxHeapSize = "1536m"
-    jvmArgs = listOf("-XX:MaxPermSize=512m")
+}
+tasks{
+    shadowJar {
+        manifest {
+            attributes(Pair("Main-Class", "net.krupizde.lambdaPPA.RouteMyWayApplicationKt"))
+        }
+    }
 }
